tester_ft/log/compile_error_vec_14.txt
-VECTOR SWAP TEST-

./tmp/outfile_vec_14.cpp:28:6: error: no member named 'swap' in 'ft::vector<int>'
                v1.swap(v2);
                ~~ ^
./tmp/outfile_vec_14.cpp:36:3: error: no member named 'swap' in namespace 'ft'; did you mean 'std::swap'?
                ft::swap(v1, v2);
                ^~~~~~~~
                std::swap
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/__utility/swap.h:36:85: note: 'std::swap' declared here
inline _LIBCPP_INLINE_VISIBILITY __swap_result_t<_Tp> _LIBCPP_CONSTEXPR_AFTER_CXX17 swap(_Tp& __x, _Tp& __y)
                                                                                    ^
./tmp/outfile_vec_14.cpp:62:5: error: no member named 'swap' in 'ft::vector<int>'
        v3.swap(v4);
        ~~ ^
In file included from ./tmp/outfile_vec_14.cpp:4:
/Users/anastasiadementeva/Desktop/projects/ft_containers/vector.hpp:54:6: error: field '_alloc' will be initialized after field '__begin_' [-Werror,-Wreorder-ctor]
                        : _alloc(x._alloc), __begin_(u_nullptr), __end_(u_nullptr), _end_cap_(u_nullptr)
                          ^~~~~~~~~~~~~~~~  ~~~~~~~~~~~~~~~~~~~  ~~~~~~~~~~~~~~~~~  ~~~~~~~~~~~~~~~~~~~~
                          __begin_(u_nullptr) __end_(u_nullptr)  _end_cap_(u_nullptr) _alloc(x._alloc)
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/__utility/swap.h:38:7: note: in instantiation of member function 'ft::vector<int>::vector' requested here
  _Tp __t(_VSTD::move(__x));
      ^
./tmp/outfile_vec_14.cpp:36:7: note: in instantiation of function template specialization 'std::swap<ft::vector<int> >' requested here
                ft::swap(v1, v2);
                    ^
4 errors generated.
